--- a/versions/8/template/src/main/webapp/index.html
+++ b/versions/8/template/src/main/webapp/index.html
@@ -209,7 +209,7 @@
 
  <section class='container'>
           <hgroup>
-            <h1>Welcome to your WildFly AS 8 application on OpenShift</h1>
+            <h1>Welcome to your WildFly 8 application on OpenShift</h1>
           </hgroup>
 
 
@@ -239,9 +239,8 @@ $ git push</pre>
                 <h2>Sample Applications</h2>
                   To get started you can either modify the default war or try one of these samples:
                     <ul>
-                      <li><a href="https://github.com/openshift/kitchensink-example">kitchensink-example</a> this quickstart showcases some of the exciting Java EE6 features available on WildFly AS 8.</li>
-                      <li><a href="https://github.com/openshift/kitchensink-html5-mobile-example">kitchensink-html5-mobile-example</a> based on kitchensink (above), but with an HTML5 client that displays great on a PC or mobile device.</li>
-                      <li><a href="https://github.com/openshift/tweetstream-example">tweetstream-example</a> a TweetStream example</li>
+                      <li><a href="https://github.com/wildfly/quickstart/tree/master/kitchensink">kitchensink-example</a> helps you get your foot in the door developing with Java EE 7 on WildFly 8.</li>
+                      <li><a href="https://github.com/wildfly/quickstart/tree/master/kitchensink-html5-mobile">kitchensink-html5-mobile-example</a> based on kitchensink (above), but with an HTML5 client that displays great on a PC or mobile device.</li>
                     </ul>
                     
                     <h3>Example usage</h3>
