Adding support for a java8 marker file and temporarily installing JDK 8

--- a/versions/8/template/pom.xml
+++ b/versions/8/template/pom.xml
@@ -10,8 +10,10 @@
   
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-    	<maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.executable>${env.OPENSHIFT_WILDFLY_DIR}usr/lib/jvm/jdk1.8.0_05/bin/javac</maven.compiler.executable>
+        <maven.compiler.fork>true</maven.compiler.fork>
     </properties>
     
     <dependencies>
