Removing WF variable references

--- a/versions/8/template/pom.xml
+++ b/versions/8/template/pom.xml
@@ -12,7 +12,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <maven.compiler.executable>${env.OPENSHIFT_WILDFLY_DIR}usr/lib/jvm/jdk1.8.0_05/bin/javac</maven.compiler.executable>
+        <maven.compiler.executable>${env.OPENSHIFT_AEROGEAR_PUSH_DIR}usr/lib/jvm/jdk1.8.0_05/bin/javac</maven.compiler.executable>
         <maven.compiler.fork>true</maven.compiler.fork>
     </properties>
     
